--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ on:
         description: 'KERNEL_TREE_URL'
         required: true
         default: 'https://github.com/AOSPA/android_kernel_xiaomi_sm8250'
+      KERNEL_TREE_BRANCH:
+        description: 'KERNEL_TREE_BRANCH'
+        required: true
+        default: 'uvite'
       KERNEL_PATH:
         description: 'KERNEL_PATH'
         required: true
@@ -131,7 +135,7 @@ jobs:
         github.event.inputs.KERNEL_TREE_URL != null
         && github.event.inputs.KERNEL_PATH != null
       run: |
-        git clone ${{ github.event.inputs.KERNEL_TREE_URL }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.KERNEL_PATH }}
+        git clone ${{ github.event.inputs.KERNEL_TREE_URL }} -b ${{ github.event.inputs.KERNEL_TREE_BRANCH }} ./${{ github.event.inputs.KERNEL_PATH }}
       working-directory: ${{ steps.pwd.outputs.workspace-folder }}
 
     - name: Check Build Tree
